--- a/src/App.css
+++ b/src/App.css
@@ -99,4 +99,59 @@
   padding: 2rem;
   background-color: #faf8f8;
 }
+
+.parent-education {
+  margin: 1rem;
+}
+
+.parent-education > div {
+  border-radius: 0.8rem;
+  background-color: #f1f1f1;
+  padding: 1rem;
+}
+
+.parent-education > div nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.parent-education > div nav h5 {
+  text-transform: capitalize;
+}
+
+.parent-education > div nav h5:last-child {
+  color: rgba(0, 0, 0, 0.685);
+}
+
+.parent-education > div p {
+  color: rgba(0, 0, 0, 0.466);
+}
+
+.parent-education > div {
+  margin-bottom: 1rem;
+}
+
+.parent-project {
+  margin: 1rem;
+}
+
+.parent-project div {
+  background-color: #f1f1f1;
+  border-radius: 1rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
+}
+
+.parent-project div h5 {
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+.parent-project div p {
+  color: rgba(0, 0, 0, 0.685);
+}
 /*# sourceMappingURL=App.css.map */
