--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 .App {
 	box-sizing: border-box;
 	box-shadow: 0 0 2rem -1rem black;
+	margin-bottom: 3rem;
 	header {
 		font-family: 'Basic', sans-serif;
 		background-color: #2f3f4e;
@@ -75,6 +76,15 @@
 			font-family: 'Montserrat', sans-serif;
 			padding: 2rem;
 			background-color: rgb(250, 248, 248);
+			.about {
+				p {
+					padding: 1rem;
+					margin: 1rem;
+					border-radius: 1rem;
+					background-color: #f1f1f1;
+					color: rgba(0, 0, 0, 0.644);
+				}
+			}
 		}
 	}
 }
@@ -103,18 +113,54 @@
 	}
 }
 .parent-project {
+	margin-top: 1rem;
+	ul {
+		list-style-type: none;
+		li {
+			font-family: 'Basic', sans-serif;
+			padding: 0.5rem 1rem;
+			background-color: #f1f1f1;
+			font-size: 1.3rem;
+			margin: 1rem;
+			border-radius: 0.5rem;
+			text-align: center;
+			&:hover {
+				cursor: pointer;
+			}
+		}
+	}
+}
+.parent-experience {
 	margin: 1rem;
-	div {
-		background-color: #f1f1f1;
-		border-radius: 1rem;
-		margin: 0.5rem;
+	background-color: #f1f1f1;
+	border-radius: 1rem;
+	padding: 1rem;
+	h5 {
+		align-items: center;
+		span:first-child {
+			font-size: 1.2rem;
+			font-weight: 400;
+		}
+		span:last-child {
+			font-size: 1.2rem;
+			font-family: 'Nunito Sans', sans-serif;
+		}
+	}
+	p {
+		margin: 1rem;
+		font-size: 1.05rem;
+	}
+}
+.portfolio {
+	a {
 		padding: 0.5rem;
-		h5 {
-			font-weight: 500;
-			text-transform: capitalize;
+		background-color: rgb(250, 248, 248);
+		border-radius: 0.5rem;
+		color: black;
+		text-overflow: ellipsis;
+		&:hover {
+			text-decoration: none;
 		}
-		p {
-			color: rgba(0, 0, 0, 0.685);
-		}
+		margin-bottom: 1rem;
 	}
 }
